--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "start": "func start --port 8080",
+    "test": "echo \"No tests yet...\"",
+    "local": "ngrok http 8080"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "azure-functions-core-tools": "3"
+  },
+  "devDependencies": {
+    "ngrok": "^4.2.2"
+  }
 }
