--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,5 +39,6 @@ jobs:
       id: fa
       with:
         app-name: 'bog-donut'
+        slot-name: 'production'
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
