--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"No tests yet...\"",
     "local": "ngrok http 8080",
     "lint": "eslint --fix --ext .js,.ts,.tsx .",
-    "secrets:linux": "echo Enter Bitwarden Password: && read -p BW_PASSWORD && BW_SESSION=`npx bw login product@bitsofgood.org $BW_PASSWORD --raw` && npm run secrets:get",
+    "secrets:linux": "echo Enter Bitwarden Password: && read -p BW_PASSWORD && BW_SESSION=`bw login product@bitsofgood.org $BW_PASSWORD --raw` && npm run secrets:get",
     "secrets:windows": "(bw logout || VER>NUL) && set /p BW_PASSWORD=Enter Bitwarden Password:&& npm run secrets:login",
     "secrets:login": "FOR /F %a IN ('bw login product@bitsofgood.org %BW_PASSWORD% --raw') DO SET BW_SESSION=%a && npm run secrets:get",
     "secrets:get": "bw sync && bw get item 5d54992e-204b-46da-b1dc-ae140016aa4c | fx .notes > \"local.settings.json\""
