--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "func start --port 8080",
     "test": "echo \"No tests yet...\"",
     "local": "ngrok http 8080",
-    "lint": "eslint --fix --ext .js,.ts,.tsx ."
+    "lint": "eslint --fix --ext .js,.ts,.tsx .",
+    "secrets:linux": "echo Enter Bitwarden Password: && read BW_PASSWORD && (bw logout || exit 0) && export BW_SESSION=`bw login product@bitsofgood.org $BW_PASSWORD --raw` && npm run secrets:get",
+    "secrets:windows": "set /p BW_PASSWORD=Enter Bitwarden Password:&& (bw logout || VER>NUL) && npm run secrets:login",
+    "secrets:login": "FOR /F %a IN ('bw login product@bitsofgood.org %BW_PASSWORD% --raw') DO SET BW_SESSION=%a && npm run secrets:get",
+    "secrets:get": "bw sync && bw get item 5d54992e-204b-46da-b1dc-ae140016aa4c | fx .notes > \"local.settings.json\""
   },
   "dependencies": {
     "@slack/bolt": "^3.8.1",
@@ -14,9 +18,11 @@
     "mongodb": "^4.2.2"
   },
   "devDependencies": {
+    "@bitwarden/cli": "^1.20.0",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "fx": "^20.0.2",
     "ngrok": "^4.2.2",
     "prettier": "^2.5.1"
   }
